# LoanApplication

./: .gitignore  .pre-commit-config.yaml  Commands.txt  Makefile  docker-compose.yml  run_tests.sh
database/: init.sql
services/api/: Dockerfile  pyproject.toml
services/api/app/: config.py  database.py  kafka_producer.py  main.py  models.py  schemas.py
services/api/tests/: test_main.py  test_schemas.py
services/common/: config.py  database.py  kafka_consumer.py  models.py
services/credit/: Dockerfile  pyproject.toml
services/credit/app/: cibil_simulator.py  config.py  kafka_consumer.py  main.py
services/credit/tests/: test_cibil_simulator.py
services/decision/: Dockerfile  pyproject.toml
services/decision/app/: decision_engine.py  main.py
services/decision/tests/: test_decision.py
